--- a/gcc-4_1-branch/gcc/objcp/ChangeLog
+++ b/gcc-4_1-branch/gcc/objcp/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-30  Jason Merrill  <jason@redhat.com>
+
+	* objcp-decl.c (objcp_start_struct): Pass null attributes argument
+	to begin_class_definition.
+
 2006-05-24  Release Manager
 
 	* GCC 4.1.1 released.
