PR c++/28370 	* decl2.c (note_vague_linkage_var): Removed. 	(finish_static_data_member_decl): Add decl to pending_statics vector 	directly.  Do it even for non-public decls.
	* g++.dg/template/anon3.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/redhat@116506 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2006-07-15  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/28370
+	* decl2.c (note_vague_linkage_var): Removed.
+	(finish_static_data_member_decl): Add decl to pending_statics vector
+	directly.  Do it even for non-public decls.
+
 2006-06-29  Jason Merrill  <jason@redhat.com>
 
 	PR c++/26905
