The live range speedup patch.
 implement live on entry on a per block basis



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/out-of-ssa-the-sequel@116513 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,29 @@
 2006-08-28  Andrew MacLeod  <amacleod@redhat.com>
 
+	* tree-ssa-live.c (new_tree_live_info, delete_tree_live_info): Update.
+	(add_livein_if_notdef): Delete.
+	(loe_visit_block): New.  Propogate live on entry info for a block into
+	each predecessor.  If it changes, make sure it is visited again.
+	(live_worklist): Visit every block and update the live on entry info 
+	for preds.  Iterate over any that changed.
+	(set_var_live_on_entry): Populate the live on entry blocks with bits
+	based on the immediate uses of a var.
+	(calculate_live_on_entry): Remove.
+	(calculate_live_on_exit): Calculate live on exit based on the newly
+	oriented live on entry bits.
+	(calculate_live_ranges): Build live on entry and exit vectors.
+	(dump_live_info): Use new orientation of live on entry bitmaps.
+	(verify_live_on_entry): New.  Split out verification code from old
+	calculate_live_on_entry routine.
+	* tree-ssa-live.h (struct tree_live_info_d): Add Working stack.
+	(live_entry_blocks): Rename to live_on_entry and return bitmap for a
+	basic_block instead of for a partition.
+	(live_merge_and_clear): Add asserts.
+	(make_live_on_entry): Set partition bit in basic block vector.
+	* tree-outof-ssa.c (coalesce_ssa_name): Use calculate_live_ranges.
+
+2006-08-28  Andrew MacLeod  <amacleod@redhat.com>
+
 	* tree-outof-ssa.c (struct value_expr_d): Remove.
 	(struct temp_expr_table_d): Change value_expr_p's to bitmap.  Delete
 	free_list.
