--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -1,6 +1,10 @@
 2006-08-28  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline
+	2006-01-21  Ben Elliston  <bje@au.ibm.com>
+	* varasm.c (assemble_real): Initialise data array.
+
+	Backport from mainline
 	2006-01-18  Ben Elliston  <bje@au.ibm.com>	
 	* Makefile.in (D32PBIT_FUNCS): New.
 	(D64PBIT_FUNCS, D128PBIT_FUNCS): Likewise.
