--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -1,6 +1,11 @@
 2006-08-28  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline
+	2006-02-06  Ben Elliston  <bje@au.ibm.com>
+	* configure.ac: Unconditionally disable decimal float by default.
+	* configure: Regenerate.
+
+	Backport from mainline
 	2006-02-04  Ben Elliston  <bje@au.ibm.com>
 	* dfp.c (decimal_real_arithmetic): Change second argument type
 	from int to enum tree_code. Do not always return true, but now
