Backport from mainline (r110637) 	2006-02-06  Ben Elliston  <bje@au.ibm.com> 	* configure.ac: Unconditionally disable decimal float by default. 	* configure: Regenerate.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/ibm@116522 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_1-branch/libdecnumber/ChangeLog
+++ b/gcc-4_1-branch/libdecnumber/ChangeLog
@@ -1,3 +1,10 @@
+2006-08-28  Janis Johnson  <janis187@us.ibm.com>
+
+	Backport from mainline
+	2006-02-06  Ben Elliston  <bje@au.ibm.com>
+	* configure.ac: Unconditionally disable decimal float by default.
+	* configure: Regenerate.
+
 2006-08-25  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline
