--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -1,6 +1,15 @@
 2006-08-28  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline
+	2006-02-07  Ben Elliston  <bje@au.ibm.com>
+	* config/i386/i386.c (ix86_scalar_mode_supported_p): New.
+	(TARGET_SCALAR_MODE_SUPPORTED_P): Define hook.
+	(classify_argument): Handle SDmode, DDmode, TDmode for 64-bit.
+	(ix86_return_in_memory): Handle TDmode.
+	(ix86_libcall_value): Handle SDmode, DDmode, TDmode.
+	(ix86_value_regno): Return non-TDmode decimal float modes in %eax.
+
+	Backport from mainline
 	2006-02-06  Ben Elliston  <bje@au.ibm.com>
 	* configure.ac: Unconditionally disable decimal float by default.
 	* configure: Regenerate.
