Backport from mainline (part of r198241) 	2006-01-02  Paolo Bonzini  <bonzini@gnu.org>
libdecnumber/ChangeLog
        PR target/25259
        * configure.ac: Use GCC_HEADER_STDINT.
        * decContext.h: Include gstdint.h.
        * aclocal.m4: Regenerate.
        * configure: Regenerate.

config/ChangeLog
        PR target/25259
        * Makefile.in (DECNUMINC): Include libdecnumber's build directory.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/ibm@116528 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_1-branch/config/ChangeLog
+++ b/gcc-4_1-branch/config/ChangeLog
@@ -1,3 +1,10 @@
+2006-08-28  Janis Johnson  <janis187@us.ibm.com>
+
+	Backport from mainline (part of r198241)
+	2006-01-02  Paolo Bonzini  <bonzini@gnu.org>
+        PR target/25259
+        * Makefile.in (DECNUMINC): Include libdecnumber's build directory.
+
 2006-05-24  Release Manager
 
 	* GCC 4.1.1 released.
