Backport from mainline (r111750) 	2006-03-06  Ben Elliston  <bje@au.ibm.com> 	* config/dfp-bit.h (CMPtype): Typedef to a word mode integer.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/ibm@116532 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -1,6 +1,10 @@
 2006-08-28  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline
+	2006-03-06  Ben Elliston  <bje@au.ibm.com>
+	* config/dfp-bit.h (CMPtype): Typedef to a word mode integer.
+
+	Backport from mainline
 	2006-03-02  Ben Elliston  <bje@au.ibm.com>
 	* mklibgcc.in: Depend on config/dfp-bit.h in rules that compile
 	config/dfp-bit.c.
