--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -2,6 +2,11 @@
 
 	Backport from mainline
 	2006-03-06  Ben Elliston  <bje@au.ibm.com>
+	* config.gcc: Add t-dfprules to $tmake_file for i*86-*-linux* and
+	x86_64-*-linux* configurations.
+
+	Backport from mainline
+	2006-03-06  Ben Elliston  <bje@au.ibm.com>
 	* config/dfp-bit.h (CMPtype): Typedef to a word mode integer.
 
 	Backport from mainline
