Backport from mainline (r111752) 	* gcc/config/t-dfprules: Fix a comment.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/ibm@116534 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -1,6 +1,9 @@
 2006-08-28  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline
+	* gcc/config/t-dfprules: Fix a comment.
+
+	Backport from mainline
 	2006-03-06  Ben Elliston  <bje@au.ibm.com>
 	* config.gcc: Add t-dfprules to $tmake_file for i*86-*-linux* and
 	x86_64-*-linux* configurations.
