--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -1,6 +1,10 @@
 2006-08-28  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline
+ 	* config/dfp-bit.h (CMPtype): Typedef to a word mode integer.
+	(LIBGCC2_WORDS_BIG_ENDIAN): Define.
+ 
+	Backport from mainline
 	* gcc/config/t-dfprules: Fix a comment.
 
 	Backport from mainline
