Backport from mainline (r114922)
libdecnumber/ChangeLog
	2006-06-23  Ben Elliston  <bje@au.ibm.com>
	* decNumber.h (decNumberNegate): Remove.

gcc/ChangeLog
	2006-06-23  Ben Elliston  <bje@au.ibm.com>
	* dfp.c (decimal_to_decnumber): Do not use decNumberNegate to
	negate dn -- manipulate it directly.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/ibm@116537 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_1-branch/libdecnumber/ChangeLog
+++ b/gcc-4_1-branch/libdecnumber/ChangeLog
@@ -1,5 +1,9 @@
 2006-08-28  Janis Johnson  <janis187@us.ibm.com>
 
+	Backport from mainline
+	2006-06-23  Ben Elliston  <bje@au.ibm.com>
+	* decNumber.h (decNumberNegate): Remove.
+
 	Backport from mainline (partial)
 	2006-01-02  Paolo Bonzini  <bonzini@gnu.org>
         PR target/25259
