--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -1,6 +1,11 @@
 2006-08-28  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline
+	2006-06-23  Ben Elliston  <bje@au.ibm.com>
+	* dfp.c (decimal_to_decnumber): Do not use decNumberNegate to
+	negate dn -- manipulate it directly.
+
+	Backport from mainline
 	2006-03-08  Ben Elliston  <bje@au.ibm.com>
 	* config/fp-bit.h (CMPtype): Typedef to a word mode integer.
 
