Backport from mainline (r114951)
gcc/ChangeLog
	2006-06-23  Janis Johnson  <janis187@us.ibm.com>
	* tree.h (DECIMAL_FLOAT_TYPE_P): New.
	* c-typeck.c (c_common_type): Disallow operations on decimal float
	types and other float types.
	* convert.c (convert_to_real): Don't ignore conversions involving
	decimal float types.

gcc/testsuite/ChangeLog
	2006-06-23  Janis Johnson  <janis187@us.ibm.com>
	* gcc.dg/dfp/usual-arith-conv-bad.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/ibm@116538 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -1,6 +1,14 @@
 2006-08-28  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline
+	2006-06-23  Janis Johnson  <janis187@us.ibm.com>
+	* tree.h (DECIMAL_FLOAT_TYPE_P): New.
+	* c-typeck.c (c_common_type): Disallow operations on decimal float
+	types and other float types.
+	* convert.c (convert_to_real): Don't ignore conversions involving
+	decimal float types.
+
+	Backport from mainline
 	2006-06-23  Ben Elliston  <bje@au.ibm.com>
 	* dfp.c (decimal_to_decnumber): Do not use decNumberNegate to
 	negate dn -- manipulate it directly.
