--- a/gcc-4_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_1-branch/gcc/testsuite/ChangeLog
@@ -1,5 +1,7 @@
 2006-08-28  Janis Johnson  <janis187@us.ibm.com>
 
+	* gcc.dg/dfp/struct-union.c: Update expected errors for 4.1.
+
 	Backport from mainline (r114951)
 	2006-06-23  Janis Johnson  <janis187@us.ibm.com>
 	* gcc.dg/dfp/usual-arith-conv-bad.c: New test.
