--- a/gcc-4_1-branch/libdecnumber/ChangeLog
+++ b/gcc-4_1-branch/libdecnumber/ChangeLog
@@ -1,5 +1,7 @@
 2006-08-28  Janis Johnson  <janis187@us.ibm.com>
 
+	* configure: Regenerate.
+
 	Backport from mainline
 	2006-06-23  Ben Elliston  <bje@au.ibm.com>
 	* decNumber.h (decNumberNegate): Remove.
