* optabs.c (expand_float): Fix merge problem.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/ibm@116565 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-29  Janis Johnson  <janis187@us.ibm.com>
+
+	* optabs.c (expand_float): Fix merge problem.
+
 2006-08-28  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline
