* cse.c (find_comparison_args, fold_rtx): Fix merge problems.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/ibm@116566 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2006-08-29  Janis Johnson  <janis187@us.ibm.com>
 
+	* cse.c (find_comparison_args, fold_rtx): Fix merge problems.
+
 	* optabs.c (expand_float): Fix merge problem.
 
 2006-08-28  Janis Johnson  <janis187@us.ibm.com>
