* version.c (VERSUFFIX): Set to IBM. 	(bug_report_url): Set to IBM Bugzilla.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/ibm@116567 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_1-branch/gcc/ChangeLog
+++ b/gcc-4_1-branch/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2006-08-29  Janis Johnson  <janis187@us.ibm.com>
 
+	* version.c (VERSUFFIX): Set to IBM.
+	(bug_report_url): Set to IBM Bugzilla.
+
 	* cse.c (find_comparison_args, fold_rtx): Fix merge problems.
 
 	* optabs.c (expand_float): Fix merge problem.
