--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,24 @@
+2006-08-30  Andrew MacLeod  <amacleod@redhat.com>
+
+	* tree-ssa-live.c (compact_var_map): Remove.
+	(partition_view_init): New.  Routine to ready a var_map for any type
+	of compacted view.
+	(partition_view_fini): New.  Perform compaction based on a bitmap of 
+	desired elements in a var_map.
+	(partition_view_normal): New.  Perform what use to be var_map_compact 
+	with VARMAP_NORMAL as a parameter.
+	(partition_view_no_single_version): New.  Perform what use to be 
+	var_map_compact with VARMAP_NO_SINGLE_DEFS.
+	(build_tree_conflict_graph): Don't modify the coalesce list, and remove
+	the coalesce list from the parameter list.
+	* tree-ssa-live.h (VARMAP_NORMAL, VARMAP_NO_SINGLE_DEFS): Remove.
+	* tree-outof-ssa.c (coalesce_result_decls_and_copies): Renamed from
+	coalesce_result_decls and add coalesces taht use to be added in 
+	build_tree_conflict_graph.
+	(coalesce_ssa_name): Reorder function calls slightly, use new partition
+	view routines.
+	(remove_ssa_form): Move initial compaction to coalesce_ssa_name.
+
 2006-08-29  Andrew MacLeod  <amacleod@redhat,com>
 
 	* tree-ssa-live.c (type_var_init): Remove.
