--- a/gcc-4_1-branch/libjava/ChangeLog
+++ b/gcc-4_1-branch/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2006-08-31  Tom Tromey  <tromey@redhat.com>
+
+	PR libgcj/28698:
+	* libgcj_bc.c (DECLARE_PRIM_TYPE): New macro.  Declare primitive
+	classes.
+
 2006-08-22  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
 	PR libgcj/27890
