PR libgcj/28698: 	* libgcj_bc.c (DECLARE_PRIM_TYPE): New macro.  Declare primitive 	classes.
boehm-gc
        PR libgcj/13212:
        * configure.ac: Check for pthread_getattr_np(). Remove
        GC_PTHREAD_SYM_VERSION detection.
        * include/gc.h (GC_register_my_thread, GC_unregister_my_thread,
        GC_get_thread_stack_base): New declarations.
        * pthread_support.c (GC_register_my_thread, GC_unregister_my_thread,
        GC_get_thread_stack_base): New functions.
        (GC_delete_thread): Don't try to free the first_thread.
        * misc.c (GC_init_inner): Use GC_get_thread_stack_base() if possible.
        (pthread_create_, constr): Removed.
        (pthread_create): Don't rename.
        * include/gc_ext_config.h.in: Rebuilt.
        * include/gc_pthread_redirects.h (pthread_create): Define
        unconditionally.
        * include/gc_config.h.in: Rebuilt.
        * configure: Rebuilt.
libjava
        * java/lang/natThread.cc (_Jv_AttachCurrentThread): Attach thread
        to GC.
        (_Jv_DetachCurrentThread): Detach thread from GC.
        * include/boehm-gc.h (_Jv_GCAttachThread, _Jv_GCDetachThread):
        Declare.
        * boehm.cc (_Jv_GCAttachThread): New function.
        (_Jv_GCDetachThread): Likewise.

gcc/java/ChangeLog
        * jvspec.c (lang_specific_driver): Add -s-bc-abi when needed.
libjava/ChangeLog
        * configure, Makefile.in: Rebuilt.
        * Makefile.am (toolexeclib_LTLIBRARIES): Add libgcj_bc.la.
        (libgcj_bc_la_SOURCES): New variable.
        (libgcj_bc_la_LDFLAGS): Likewise.
        (libgcj_bc_la_LIBADD): Likewise.
        (libgcj_bc_la_DEPENDENCIES): Likewise.
        (libgcj_bc_la_LINK): Likewise.
        (libgcj_bc_dummy_LINK): Likewise.
        (libgcj_bc.la): New target.
        (install-exec-hook): Likewise.
        * libgcj.spec.in (*lib): Use LIBGCJ_SPEC.
        * libgcj_bc.c: New file.
        * configure.ac (LIBGCJ_SPEC): New subst.
        * configure.host (use_libgcj_bc): New variable.


g

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,37 @@
+2006-08-31  Tom Tromey  <tromey@redhat.com>
+
+	PR libgcj/28698:
+	* libgcj_bc.c (DECLARE_PRIM_TYPE): New macro.  Declare primitive
+	classes.
+
+2006-08-21  Bryce McKinlay  <mckinlay@redhat.com>
+
+	* java/lang/natThread.cc (_Jv_AttachCurrentThread): Attach thread
+	to GC.
+	(_Jv_DetachCurrentThread): Detach thread from GC.
+	* include/boehm-gc.h (_Jv_GCAttachThread, _Jv_GCDetachThread):
+	Declare.
+	* boehm.cc (_Jv_GCAttachThread): New function.
+	(_Jv_GCDetachThread): Likewise.
+
+2006-08-16  Jakub Jelinek  <jakub@redhat.com>
+	    Bryce McKinlay  <bryce@mckinlay.net.nz>
+
+	* configure, Makefile.in: Rebuilt.
+	* Makefile.am (toolexeclib_LTLIBRARIES): Add libgcj_bc.la.
+	(libgcj_bc_la_SOURCES): New variable.
+	(libgcj_bc_la_LDFLAGS): Likewise.
+	(libgcj_bc_la_LIBADD): Likewise.
+	(libgcj_bc_la_DEPENDENCIES): Likewise.
+	(libgcj_bc_la_LINK): Likewise.
+	(libgcj_bc_dummy_LINK): Likewise.
+	(libgcj_bc.la): New target.
+	(install-exec-hook): Likewise.
+	* libgcj.spec.in (*lib): Use LIBGCJ_SPEC.
+	* libgcj_bc.c: New file.
+	* configure.ac (LIBGCJ_SPEC): New subst.
+	* configure.host (use_libgcj_bc): New variable.
+
 2006-08-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* link.cc:
