* gcc/tree.h (SYMTAB_DIE): Remove reference to SDB format in 	comments. 	* gcc/dwarf2out.c (assign_symbol_name): New function. 	(assign_symbol_names): Use it. 	(lto_init_ref): New function. 	(lto_type_ref): Likewise. 	(lto_var_ref): Likewise. 	(lto_fn_ref): Likewise. 	* gcc/dwarf2out.h (lto_out_ref): New structure. 	(lto_type_ref): Declare. 	(lto_var_ref): Likewise. 	(lto_fn_ref): Likewise.
	* lto.c (<inttypes.h>): Don't include it.
	(lto_context): Don't typedef it.
	(lto_resolve_reference): New function.
	(lto_read_form): Use it.
	(lto_resolve_type_ref): New function.
	(lto_resolve_var_ref): Likewise.
	(lto_resolve_fn_ref): Likewise.
	* lto.h (<inttypes.h>): Include it.
	(lto_context): New type.
	(lto_ref): New structure.
	(lto_resolve_type_ref): Declare.
	(lto_resolve_var_ref): Likewise.
	(lto_resolve_fn_ref): Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/lto@116677 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/lto/ChangeLog
+++ b/gcc/lto/ChangeLog
@@ -1,3 +1,23 @@
+2006-09-03  Mark Mitchell  <mark@codesourcery.com>
+
+	* lto.c (<inttypes.h>): Don't include it.
+	(lto_context): Don't typedef it.
+	(lto_resolve_reference): New function.
+	(lto_read_form): Use it.
+	(lto_resolve_type_ref): New function.
+	(lto_resolve_var_ref): Likewise.
+	(lto_resolve_fn_ref): Likewise.
+	* lto.h (<inttypes.h>): Include it.
+	(lto_context): New type.
+	(lto_ref): New structure.
+	(lto_resolve_type_ref): Declare.
+	(lto_resolve_var_ref): Likewise.
+	(lto_resolve_fn_ref): Likewise.
+
+2006-08-18  Mark Mitchell  <mark@codesourcery.com>
+
+	* lang-specs.h: New file.
+
 2006-08-14  Mark Mitchell  <mark@codesourcery.com>
 
 	* lto.c (lto_info_fd_init): Allocate the DIE cache.
