Added new cases to deal with previously unsee code like array->data[0] = x Fixed minor bug affecting debugging dump Removed extra newlines from said dump Tidied up printing of nodes types in same dump, and added new case
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/escape-analysis@116749 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,18 @@
 2006-09-06	Paul Biggar	<paul.biggar@gmail.com>
+	
+	* tree-pretty-print.c (dump_escape_function): Removed extra new lines.
+	* ipa-stack-allocate.c (is_assignment_to_indirect_array_ref) 
+	(update_connection_graph_from_assignment_to_indirect_array_ref):
+	New functions
+	(update_connection_graph_from_function_call): Switched
+	CONSTRUCTOR_STMT and FUNCTION_CALL, which were accidentally in the
+	wrong order
+	(update_connection_graph_from_statement): Added dealing with
+	assignment to indirect array references
+
+	* congraph.c (con_graph_dump_node): New case, and new macro (HANDLE).
+
+2006-09-06	Paul Biggar	<paul.biggar@gmail.com>
 
 	* tree-pretty-print.c (dump_escape_function): New function
 	* print-tree.c (debug_tree_to_file): New function
